# agent_kg

./: .clinerules  .design  .env  .env.production  .mission  .status  README.md  claude_desktop_config.proposed.json  environment.yml  kg_access.py  kg_ui.py  mcp_client.py  pyproject.toml  requirements.txt  schema.sq  setup.py
kg/: db.py  ndex.py
kg/tools/: entity.py  management.py  property.py  query.py  relationship.py
src/agent_kg/: __init__.py  handlers.py  main.py  postgres.py  server.py  server.py.proposed  server.py.proposed2  tool_definitions.py
src/agent_kg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: index.html
tests/: conftest.py  old_test_postgres.py  test_entity.py  test_integration.py  test_management.py  test_mcp_server.py  test_performance.py  test_postgres.py  test_postgres_module.py  test_property.py  test_relationship.py
